--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-numpy==1.18.1
-pandas==1.0.3
-pylint==2.5.0
+certifi==2020.6.20
+mkl-fft==1.1.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+numpy==1.18.5
+olefile==0.46
+pandas
+Pillow==7.1.2
+python-dateutil==2.8.1
+pytz==2020.1
+six==1.15.0
+torch==1.5.1
+torchvision==0.6.1
+wincertstore==0.2
