[NN Modelling] Remove the saves models from git

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ venv.bak/
 # Project Specific files
 glove.6B.50d.txt
 par_vec_trained_400.pkl.docvecs.vectors_docs.npy
+resources/output/checkpoints
