--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ absl-py==0.9.0
 astor==0.8.0
 blinker==1.4
 boto==2.49.0
-boto3 @ file:///tmp/build/80754af9/boto3_1593439033587/work
-botocore @ file:///tmp/build/80754af9/botocore_1593435624439/work
+boto3
+botocore
 brotlipy==0.7.0
 cachetools==4.1.1
 certifi==2020.6.20
@@ -14,61 +14,61 @@ cryptography==2.9.2
 docutils==0.15.2
 gast==0.2.2
 gensim==3.8.0
-google-api-core @ file:///C:/ci/google-api-core-split_1594356932141/work
+google-api-core
 google-auth==1.18.0
 google-auth-oauthlib==0.4.1
 google-cloud-core==1.3.0
-google-cloud-storage @ file:///tmp/build/80754af9/google-cloud-storage_1594357999796/work
+google-cloud-storage
 google-pasta==0.2.0
-google-resumable-media @ file:///tmp/build/80754af9/google-resumable-media_1594358346190/work
+google-resumable-media
 googleapis-common-protos==1.52.0
 googledrivedownloader==0.4
 grpcio==1.27.2
 h5py==2.10.0
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-jmespath @ file:///tmp/build/80754af9/jmespath_1594304593830/work
-joblib @ file:///tmp/build/80754af9/joblib_1594236160679/work
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
+idna
+jmespath
+joblib
+Keras-Applications
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
 mkl-fft==1.1.0
 mkl-random==1.1.1
 mkl-service==2.3.0
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
+nltk
 numpy==1.18.5
 oauthlib==3.1.0
 olefile==0.46
 opt-einsum==3.1.0
-pandas @ file:///C:/ci/pandas_1592841747005/work
-Pillow @ file:///C:/ci/pillow_1594298234712/work
+pandas
+Pillow
 protobuf==3.12.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pycparser
 PyJWT==1.7.1
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
+pyOpenSSL
 pyreadline==2.1
-PySocks @ file:///C:/ci/pysocks_1594394709107/work
+PySocks
 python-dateutil==2.8.1
 pytz==2020.1
-regex @ file:///C:/ci/regex_1593435644645/work
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
+regex
+requests
 requests-oauthlib==1.3.0
 rsa==4.6
-s3transfer @ file:///C:/ci/s3transfer_1594411925509/work
-scikit-learn @ file:///C:/ci/scikit-learn_1592847564598/work
-scipy @ file:///C:/ci/scipy_1592916958183/work
+s3transfer
+scikit-learn
+scipy
 six==1.15.0
-smart-open @ file:///tmp/build/80754af9/smart_open_1594236772807/work
+smart-open
 tensorboard==2.2.1
 tensorboard-plugin-wit==1.6.0
 tensorflow==2.1.0
 tensorflow-estimator==2.1.0
 termcolor==1.1.0
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
+threadpoolctl
 torch==1.5.1
 torchvision==0.6.1
-tqdm @ file:///tmp/build/80754af9/tqdm_1593446365756/work
+tqdm
 urllib3==1.25.9
 Werkzeug==0.16.1
 win-inet-pton==1.1.0
