[predict-save-model] Add the label class and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ venv.bak/
 glove.6B.50d.txt
 par_vec_trained_400.pkl.docvecs.vectors_docs.npy
 resources/output/checkpoints
+resources/report
+notebooks
