[Data-splitting] Remove categorical data and use just the label index to model the code

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ par_vec_trained_400.pkl.docvecs.vectors_docs.npy
 resources/output/checkpoints
 resources/report
 notebooks
+resources/data/mycroft
