[Mycroft-data-manipulation] Ignore large directories

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ resources/output/checkpoints
 resources/report
 notebooks
 resources/data/mycroft
+resources/data/mini-data
+resources/data/0
+resources/output/mycroft*.csv
