[Fix-Feature-Store-Path] Update the main with dynamic paths for pickle files

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ resources/data/mycroft
 resources/data/mini-data
 resources/data/0
 resources/output/mycroft*.csv
+resources/output/features/train*.p
+resources/output/features/test*.p
