--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,10 @@
 matplotlib
 seaborn
-absl-py==0.9.0
-astor==0.8.0
-blinker==1.4
-boto==2.49.0
-boto3
-botocore
-brotlipy==0.7.0
-cachetools==4.1.1
-certifi==2020.6.20
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.2
-cryptography==2.9.2
-docutils==0.15.2
-gast==0.2.2
-gensim==3.8.0
-google-api-core
-google-auth==1.18.0
-google-auth-oauthlib==0.4.1
-google-cloud-core==1.3.0
-google-cloud-storage
-google-pasta==0.2.0
-google-resumable-media
-googleapis-common-protos==1.52.0
+gensim
 googledrivedownloader==0.4
-grpcio==1.27.2
-h5py==2.10.0
-idna
-jmespath
-joblib
-Keras-Applications
-Keras-Preprocessing==1.1.0
-Markdown==3.1.1
-mkl-fft==1.1.0
-mkl-random==1.1.1
-mkl-service==2.3.0
 nltk
-numpy==1.18.5
-oauthlib==3.1.0
-olefile==0.46
-opt-einsum==3.1.0
+numpy
 pandas
-Pillow
-protobuf==3.12.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser
-PyJWT==1.7.1
-pyOpenSSL
-pyreadline==2.1
-PySocks
-python-dateutil==2.8.1
-pytz==2020.1
-regex
-requests
-requests-oauthlib==1.3.0
-rsa==4.6
-s3transfer
 scikit-learn
 scipy
-six==1.15.0
-smart-open
-tensorboard==2.2.1
-tensorboard-plugin-wit==1.6.0
-tensorflow==2.1.0
-tensorflow-estimator==2.1.0
-termcolor==1.1.0
-threadpoolctl
-torch==1.5.1
-torchvision==0.6.1
 tqdm
-urllib3==1.25.9
-Werkzeug==0.16.1
-win-inet-pton==1.1.0
-wincertstore==0.2
-wrapt==1.12.1
